2003-01-11  Bruno Haible  <bruno@clisp.org>

	* alloca.m4 (gl_FUNC_ALLOCA): Invoke AC_EGREP_CPP prerequisites.

2003-01-12  Paul Eggert  <eggert@twinsun.com>

	Finish renaming getstr -> getdelim2 and readline -> readlinebuffer,
	to avoid collisions with libcurses and libreadline.

	* getstr.m4: Remove.
	* getline.m4 (gl_PREREQ_GETLINE): Require AC_HEADER_STDC.

2003-01-10  Bruno Haible  <bruno@clisp.org>

	* alloca.m4 (gl_FUNC_ALLOCA): Also define ALLOCA_H.

2003-01-09  Bruno Haible  <bruno@clisp.org>

	* stdbool.m4 (AM_STDBOOL_H): New macro.

2002-12-31  Paul Eggert  <eggert@twinsun.com>

	* memcoll.m4 (gl_MEMCOLL): Require AC_FUNC_MEMCMP.

2002-12-24  Bruno Haible  <bruno@clisp.org>

	General infrasructure.
	* README: Rewritten.
	* onceonly.m4: New file.
	* onceonly_2_57.m4: New file.

	Module atexit.
	* atexit.m4: New file.

	Module strtod.
	* strtod.m4: New file.

	Module strtol.
	* strtol.m4: New file.

	Module strtoul.
	* strtoul.m4: New file.

	Module memchr.
	* memchr.m4: New file.

	Module memcmp.
	* memcmp.m4 (gl_PREREQ_MEMCMP): New macro.
	(jm_FUNC_MEMCMP): Invoke it.

	Module memcpy.
	* memcpy.m4: New file.

	Module memmove.
	* memmove.m4: New file.

	Module memset.
	* memset.m4: New file.

	Module strcspn.
	* strcspn.m4: New file.

	Module strpbrk.
	* strpbrk.m4: New file.

	Module strstr.
	* strstr.m4: New file.

	Module strerror.
	* strerror.m4: New file.

	Module mktime.
	* mktime.m4: Renamed from jm-mktime.m4.
	(gl_PREREQ_MKTIME): New macro.
	(gl_FUNC_MKTIME): Renamed from jm_FUNC_MKTIME. Invoke gl_PREREQ_MKTIME.

	Module malloc.
	* malloc.m4 (gl_PREREQ_MALLOC): New macro.
	(jm_FUNC_MALLOC): Use AC_FUNC_MALLOC. Invoke gl_PREREQ_MALLOC.
	Don't define HAVE_DONE_WORKING_MALLOC_CHECK, since nothing uses it.

	Module realloc.
	* realloc.m4 (gl_PREREQ_REALLOC): New macro.
	(jm_FUNC_REALLOC): Use AC_FUNC_REALLOC. Invoke gl_PREREQ_REALLOC.
	Don't define HAVE_DONE_WORKING_REALLOC_CHECK, since nothing uses it.

	Module strftime.