@@ -1,5 +1,5 @@
-# md5.m4 serial 1
-dnl Copyright (C) 2002 Free Software Foundation, Inc.
+# md5.m4 serial 2
+dnl Copyright (C) 2002-2003 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
 dnl Public License, this file may be distributed as part of a program
@@ -9,6 +9,7 @@ dnl the same distribution terms as the rest of that program.
 AC_DEFUN([gl_MD5],
 [
   dnl Prerequisites of lib/md5.h.
+  AC_REQUIRE([AC_C_INLINE])
   AC_CHECK_HEADERS_ONCE(limits.h)
 
   dnl Prerequisites of lib/md5.c.
